--- a/MML/templates/MediaApp/generate.html
+++ b/MML/templates/MediaApp/generate.html
@@ -3,8 +3,8 @@
 {% block body_block %}
 <div class="container">
   <div class="jumbotron">
-    <h1>Press the button for ????</h1>
-    <h2> <button> Botó per fer alguna cosa</button> </h2>
+    <h1>Done</h1>
+
   </div>
 </div>
 {% endblock %}
