--- a/MML/templates/MediaApp/base.html
+++ b/MML/templates/MediaApp/base.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class = "p" style="height: 200px;">
-        
+
       <h3>Holaaaaaa</h3>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -37,6 +37,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'user_login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'generate' %}">Button que fa algo</a>
           </li>
         </ul>
       </div>
