--- a/MML/templates/MediaApp/generate.html
+++ b/MML/templates/MediaApp/generate.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="jumbotron">
     <h1>Press the button for ????</h1>
-    <h2> <button> Botó per fer alguna cosa</button> </h2>
+        <input type="submit" name="" value="bototototon">
   </div>
 </div>
 {% endblock %}
