--- a/MML/templates/MediaApp/base.html
+++ b/MML/templates/MediaApp/base.html
@@ -19,13 +19,13 @@
       <div class="col-2"></div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-      <div>
+      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Prova (not implem)</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Action</a>
               <a class="dropdown-item" href="#">Another action</a>
@@ -34,15 +34,17 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-          </li>
-          <li class="nav-item">
             {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
             <a class="nav-link" href="{% url 'user_login' %}">Login</a>
             {% endif %}
           </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' user.username %}">My Profile</a>
+          </li>
+          {% endif %}
           {% if not user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'register' %}">Register</a>
@@ -53,9 +55,16 @@
           </li>
         </ul>
       </div>
+      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'admin:index' %}">Django Admin</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
-    <div class="row">
+    <div class="row" style="padding-top:10px">
       <div class="col-sm-2"></div>
       <div class="col-sm-8">
         {% block body_block %}
