Group List added

--- a/MML/templates/MediaApp/index.html
+++ b/MML/templates/MediaApp/index.html
@@ -12,6 +12,8 @@
 </div>
 <div class="">
   <a href="http://localhost:8000/directors"><h1>Directors</h1></a>
+  <a href="http://localhost:8000/groups"><h1>Groups</h1></a>
+
   {% block dir_block %}
   {% endblock %}
 </div>
