--- a/MML/templates/MediaApp/group_list.html
+++ b/MML/templates/MediaApp/group_list.html
@@ -1,11 +1,10 @@
 {% extends "MediaApp/index.html" %}
-{% block dir_block %}
+{% block show_generic_list %}
 <ul>
   {% for group in group_list %}
   <li>
-    <a href="http://localhost:8000">{{ group.name }}</a>
-    <a>   --- Link: </a>
-    <a href="http://localhost:8000">{{ group.url_info }}</a>
+  	{{ group.name }}    <a href="{{ group.url_info }}">{{ group.url_info }}</a>
+    <!-- a href="http://localhost:8000">{{ group.name }}</a -->
   </li>
   {% endfor %}
 
