--- a/MML/templates/MediaApp/index.html
+++ b/MML/templates/MediaApp/index.html
@@ -11,11 +11,11 @@
   <div class="dropdown-divider"></div>
 </div>
 <div class="">
+  {% block show_generic_list %}
   <a href="http://localhost:8000/directors"><h1>Directors</h1></a>
   <a href="http://localhost:8000/groups"><h1>Groups</h1></a>
-
-  {% block dir_block %}
   {% endblock %}
+
 </div>
 
 {% endblock %}
