--- a/templates/MediaApp/movie_detail.html
+++ b/templates/MediaApp/movie_detail.html
@@ -1,16 +1,16 @@
-<!-- {% block content %}
+{% extends "MediaApp/index.html" %}
+{% block show_generic_list %}
   <h1>Director: {{ director.name }}</h1>
-
 
   {% if director.movies_set.all %}
   <div style="margin-left:20px;margin-top:20px">
       <h4>Movies</h4>
       <ul>
       {% for movie in director.movies_set.all %}
-      <li><p> {{envelop.name}} {{movie.url_info}}</p>
+      <li><p> {{movie.name}} {{movie.url_info}}</p>
       </li>
       {% endfor %}
       </ul>
   </div>
   {% endif %}
-{% endblock %} -->
+{% endblock %}
