--- a/templates/MediaApp/base.html
+++ b/templates/MediaApp/base.html
@@ -13,7 +13,7 @@
     <div class="row bg-dark" id="top_container">
       <div class="col-2"></div>
       <div class="col-8">
-        <a href="http://localhost:8000/" class="vectro"><span class="vectro-body">MyMediaList</span></a>
+        <a href="{% url 'index' %}" class="vectro"><span class="vectro-body">MyMediaList</span></a>
       </div>
       <div class="col-2"></div>
     </div>
@@ -73,5 +73,8 @@
       <div class="col-sm-2"></div>
     </div>
     <script type="text/javascript" src="{% static 'JS/sticky.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
