Step 0 for 2nd deliv. Removed Movies/Director and corrected Songs

--- a/static/CSS/stick.css
+++ b/static/CSS/stick.css
@@ -13,6 +13,12 @@
   background-color: #faf2f4;
 }
 
+.fit-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 #navbar {
 	z-index: 10;
 }
