Some changes in URL and permissions

--- a/templates/MediaApp/group_detail.html
+++ b/templates/MediaApp/group_detail.html
@@ -3,12 +3,12 @@
 <h3>Group: {{ group.name }}</h3>
 
 <div style="margin-left:20px;margin-top:20px">
-    <h5>Songs</h5>
-    <ul>
-    {% for song in group.song_set.all %}
-      <li>{{song.name}}</li>
-    {% endfor %}
-    </ul>
+  <h5>Songs</h5>
+  {% for song in group.song_set.all %}
+    <div class="">
+      <a class="list-group-item list-group-item-action" href="{{ song.url_info }}">{{ song.name }}</a>
+    </div>
+  {% endfor %}
 </div>
 
 {% endblock %}
