--- a/templates/MediaApp/base.html
+++ b/templates/MediaApp/base.html
@@ -18,50 +18,49 @@
       <div class="col-2"></div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-      <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+      <div class="navbar-collapse col-sm-8">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <div class="nav-item active col-sm-4">
             <a class="nav-link" href="{% url 'index' %}">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Prova (not implem)</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            {% if user.is_authenticated %}
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            {% else %}
-            <a class="nav-link" href="{% url 'user_login' %}">Login</a>
-            {% endif %}
-          </li>
+          </div>
+          <div class="nav-item col-sm-4">
+            <a class="nav-link" href="{% url 'Group' %}">Groups</a>
+          </div>
           {% if user.is_authenticated %}
-          <li class="nav-item">
+          <div class="nav-item col-sm-4">
             <a class="nav-link" href="{% url 'profile' user.username %}">My Profile</a>
-          </li>
-          {% endif %}
-          {% if not user.is_authenticated %}
-          <li class="nav-item">
+          </div>
+          <div class="nav-item col-sm-4">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+          </div>
+          {% else %}
+          <div class="nav-item col-sm-4">
             <a class="nav-link" href="{% url 'register' %}">Register</a>
-          </li>
+          </div>
+          <div class="nav-item col-sm-4">
+            <a class="nav-link" href="{% url 'user_login' %}">Login</a>
+          </div>
           {% endif %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'generate' %}">Fill database from iTunes API</a>
-          </li>
-
         </ul>
       </div>
+      {% if user.is_superuser %}
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Django Admin</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin options</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'admin:index' %}">Django Admin</a>
+              <a class="dropdown-item" href="{% url 'manage_data' %}">Manage Data</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'generate' %}">Get iTunes API</a>
+            </div>
           </li>
+          <!--li class="nav-item">
+            <a class="nav-link" href="{% url 'admin:index' %}">Django Admin</a>
+          </li-->
         </ul>
       </div>
+      {% endif %}
     </nav>
 
     <div class="row" style="padding-top:10px">
