--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -1,7 +1,11 @@
-<h1>NAME:{{song.name}}</h1>
-<h2>Director: {{song.group}}</h2>
-<h2>Release date: {{song.release_date}}</h2>
-<h2>Genre: {{song.album}}</h2>
-<h2>Description{{song.description}}</h2>
-<h2>Description{{song.genre}}</h2>
-<h2>URL: {{song.url_info}}</h2>
+{% extends "MediaApp/index.html" %}
+{% block show_generic_list %}
+<h3>Song: {{ song.name }}</h3>
+<h4>Director: {{song.group}}</h4>
+<h4>Release date: {{song.release_date}}</h4>
+<h4>Album: {{song.album}}</h4>
+<h4>Description: {{song.description}}</h4>
+<h4>Genre: {{song.genre}}</h4>
+<a href={{song.url_info}}><h4>URL to iTunes</h4></a>
+
+{% endblock %}
