Dropdown menus in manage_data

--- a/templates/MediaApp/manage_data.html
+++ b/templates/MediaApp/manage_data.html
@@ -1,6 +1,24 @@
 {% extends "MediaApp/base.html" %}
 {% block body_block %}
-<div class="">
+<div class="jumbotron">
+  <div id="add_content">
 
+    <input type="radio" name="model" value="group"> Add Group <br>
+      <div id="add_group">
+        <h4>Nepe</h4>
+        <h4>Nepe</h4>
+        <h4>Nepe</h4>
+        <h4>Nepe</h4>
+        <h4>Nepe</h4>
+
+      </div>
+    <input type="radio" name="model" value="song"> Add Song <br>
+      <div id="add_song">
+        <h4>Ironman muere</h4>
+        <h4>Thor esta gordo</h4>
+        <h4>Viuda negra</h4>
+        <h4>Muere media peli</h4>
+      </div>
+  </div>
 </div>
 {% endblock %}
