--- a/templates/MediaApp/base.html
+++ b/templates/MediaApp/base.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8">
     <title>Base</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" href="{% static 'CSS/stick.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'CSS/title.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'CSS/manage_data.css' %}">
   </head>
 
   <body>
@@ -55,9 +57,6 @@
               <a class="dropdown-item" href="{% url 'generate' %}">Get iTunes API</a>
             </div>
           </li>
-          <!--li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Django Admin</a>
-          </li-->
         </ul>
       </div>
       {% endif %}
@@ -72,8 +71,25 @@
       <div class="col-sm-2"></div>
     </div>
     <script type="text/javascript" src="{% static 'JS/sticky.js' %}"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      var $radios = $("input[name='model']");
+      $radios.change(function() {
+        var checked = $radios.filter(':checked').val();
+        if (checked == 'group') {
+          $('#add_group').slideDown(1000);
+        } else {
+          $('#add_group').slideUp(1000);
+        }
+        if (checked == 'song') {
+          $('#add_song').slideDown(1000);
+        } else {
+          $('#add_song').slideUp(1000);
+        }
+      });
+    </script>
   </body>
 </html>
