--- a/templates/MediaApp/base.html
+++ b/templates/MediaApp/base.html
@@ -73,23 +73,9 @@
     <script type="text/javascript" src="{% static 'JS/sticky.js' %}"></script>
     <script src="http://code.jquery.com/jquery-2.2.3.js"></script>
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script-->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-      var $radios = $("input[name='model']");
-      $radios.change(function() {
-        var checked = $radios.filter(':checked').val();
-        if (checked == 'group') {
-          $('#add_group').slideDown(1000);
-        } else {
-          $('#add_group').slideUp(1000);
-        }
-        if (checked == 'song') {
-          $('#add_song').slideDown(1000);
-        } else {
-          $('#add_song').slideUp(1000);
-        }
-      });
-    </script>
+    <script type="text/javascript" src="{% static 'JS/hide_menu.js' %}"></script>
+    <script type="text/javascript" src="{% static 'JS/autocomplete_groups.js' %}"></script>
   </body>
 </html>
