Finished admin CRUD operations. Now superuser in the webpage (not admin section) can Import models (from API or manual), Update them and Delete them

--- a/static/CSS/manage_data.css
+++ b/static/CSS/manage_data.css
@@ -5,3 +5,15 @@
 #add_song {
   display: none;
 }
+
+#edit_group {
+  display: none;
+}
+
+/* #edit_group {
+  display: none;
+}
+
+#edit_song {
+  display: none;
+} */
