--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -7,5 +7,7 @@
 <h4>Description: {{song.description}}</h4>
 <h4>Genre: {{song.genre}}</h4>
 <a href={{song.url_info}}><h4>URL to iTunes</h4></a>
+<a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Add Comment</a>
+
 
 {% endblock %}
