--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -8,6 +8,14 @@
 <h4>Genre: {{song.genre}}</h4>
 <a href={{song.url_info}}><h4>URL to iTunes</h4></a>
 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Add Comment</a>
-
+{% for comment in post.comments.all %}
+  <div class="comment">
+      <div class="date">{{ comment.created_date }}</div>
+      <strong>{{ comment.author }}</strong>
+      <p>{{ comment.text|linebreaks }}</p>
+    </div>
+{% empty %}
+  <p>No comments here yet :(</p>
+{% endfor %}
 
 {% endblock %}
