--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -7,15 +7,11 @@
 <h4>Description: {{song.description}}</h4>
 <h4>Genre: {{song.genre}}</h4>
 <a href={{song.url_info}}><h4>URL to iTunes</h4></a>
-<a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Add Comment</a>
-{% for comment in post.comments.all %}
-  <div class="comment">
-      <div class="date">{{ comment.created_date }}</div>
-      <strong>{{ comment.author }}</strong>
-      <p>{{ comment.text|linebreaks }}</p>
-    </div>
+{% for song_comment in comments %}
+    <strong>{{ song_comment.user }}</strong>
+    <p>{{ song_comment.content }}</p>
 {% empty %}
   <p>No comments here yet :(</p>
 {% endfor %}
-
+<a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Add Comment</a>
 {% endblock %}
