CRUD done for Comments. Now registered Users can comment song, edit and delete their own comment

--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -7,12 +7,23 @@
 <h4><b>Description:</b> <i>{{song.description}}</i> </h4>
 <h4><b>Genre:</b> <i>{{song.genre}}</i> </h4>
 <a href={{song.url_info}}><h4>URL to iTunes</h4> </a>
+{% block comments %}
+<h4>Comments:</h4>
 {% for song_comment in comments %}
+{% load tag %}
+  <div class="list-group-item list-group-item-action">
     <strong>{{ song_comment.user }}</strong>
     <p>{{ song_comment.content }}</p>
-    <input type="button" value="Delete Comment" style="float: right;">
+
+    <a href="{% url 'edit_comment' song_comment.pk %}" class="btn btn-outline-secondary btn-sm">Edit</a>
+  </div>
 {% empty %}
   <p>No comments here yet :(</p>
 {% endfor %}
-<a href="" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Add Comment</a>
+<form method="post">
+  {% csrf_token %}
+  {{ comment_form.as_p }}
+  <input type="submit" class="btn btn-light btn-lg active" value="Add Comment">
+</form>
+{% endblock %}
 {% endblock %}
