--- a/templates/MediaApp/song_info.html
+++ b/templates/MediaApp/song_info.html
@@ -1,7 +1,7 @@
 {% extends "MediaApp/index.html" %}
 {% block show_generic_list %}
 <h3><b>Song:</b> <i>{{ song.name }}</i> </h3>
-<h4><b>Director:</b> <i>{{song.group}}</i> </h4>
+<h4><b>Artits:</b> <i>{{song.group}}</i> </h4>
 <h4><b>Release date:</b> <i>{{song.release_date}}</i> </h4>
 <h4><b>Album:</b> <i>{{song.album}}</i> </h4>
 <h4><b>Description:</b> <i>{{song.description}}</i> </h4>
