--- a/templates/MediaApp/edit_song.html
+++ b/templates/MediaApp/edit_song.html
@@ -1,5 +1,5 @@
-{% extends "MediaApp/base.html" %}
-{% block body_block %}
+{% extends "MediaApp/song_group.html" %}
+{% block comments %}
 
 <div class="jumbotron">
   <h3>{{song.name}}</h3>
